<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    >

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?android:attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:layout_scrollFlags="scroll|enterAlways"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--app:logo="@mipmap/ic_launcher" />-->
    <!--</android.support.design.widget.AppBarLayout>-->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <!--<android.support.design.card.MaterialCardView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--app:contentPadding="16dp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:descendantFocusability="beforeDescendants"-->
        <!--android:focusableInTouchMode="true">-->
        <RelativeLayout
            android:id="@+id/visitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/long_logo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:fontFamily="Russo-One"
                android:src="@drawable/logo_long" />

            <TextView
                android:id="@+id/txtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:text="@string/txt_cam" />

            <LinearLayout
                android:id="@+id/btn_cam"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/long_logo"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="57dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_corner_radius"
                android:elevation="1dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnFoto"
                    android:layout_width="68dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/cam_button"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/jdlFoto"
                android:layout_width="239dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="54dp"
                android:layout_marginTop="172dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="Silahkan ambil foto data diri anda"
                android:textSize="14sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_cam"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:elevation="2dp"
                android:hint="@string/hint_name"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_name"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:elevation="2dp"
                android:hint="@string/hint_email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_email"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:elevation="2dp"
                android:hint="@string/hint_phone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <AutoCompleteTextView
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/input_layout_phone"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:hint="@string/selected_one"
                android:spinnerMode="dropdown"
                android:textSize="14sp"
                android:drawableRight="@drawable/ic_dropdown_24"
                android:completionThreshold="0"
                android:singleLine="true"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_keperluan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dropdown"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:elevation="2dp"
                android:hint="@string/hint_keperluan"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_kep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/input_layout_keperluan"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button2"
                android:text="@string/btn_submit"
                android:textColor="#fff"
                android:textSize="16sp">

            </android.support.design.button.MaterialButton>



        </RelativeLayout>

        <!--</android.support.design.card.MaterialCardView>-->
    </ScrollView>

</android.support.constraint.ConstraintLayout>